--- a/templates/class_schedule.html
+++ b/templates/class_schedule.html
@@ -1,59 +1,32 @@
 <html>
     <head>
         <title>class schedule</title>
-        <link rel="stylesheet" type="text/css" href="static/CSS/style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
     </head>
 
 <body>
-
+<div class= "table table-striped">
 <h2>Class Schedule</h2>
 
-<table>
+<table class= "table">
   <tr>
     <th>Period</th>
     <th>class</th>
     <th>teacher</th>
     <th>website<th>
   </tr>
-  <tr>
-    <td>1st</td>
-    <td>Computer Science</td>
-    <td>Ms.Lee</td>
-    <td><a href="https://repl.it/"> repl.it</td>
-</tr>
-  <tr>
-    <td>2nd</td>
-    <td>TA</td>
-    <td>Ms.Nelson</td>
-    <td><a href="https://www.24hourfitness.com">24 Hour Fitness</a></td>
-</tr>
-  <tr>
-    <td>3rd</td>
-    <td>English</td>
-    <td>Mr.Barlas</td>
-    <td><a href="https://turnitin.com">Turn it in</a></td>
-</tr>
-  <tr>
-    <td>4th</td>
-    <td>ECON</td>
-    <td>Mr.Seelbach</td>
-    <td><a href="https://www.cnn.com/"> CNN</a></td>
-  </tr>
-  <tr>
-    <td>5th</td>
-    <td>photo 2</td>
-    <td>Mr.Petterson</td>
-    <td><a href="https://www.popphoto.com/"> photos</a></td>
-  </tr>
-<tr>
-    <td>6th</td>
-    <td>AVID</td>
-    <td>Mr.Seelbach</td>
-    <td><a href="https://www.avid.org/"> AVID</a></td>
-  </tr>
-
+   {% for course in courses %}
+              <tr>
+                <td>{{ course.period }}</td>
+                <td>{{ course.name }}</td>
+                <td>{{ course.teacher_name }}</td>
+                <td><a href="{{ course.resource_url }}">{{ course.resource_name }}</a></td>
+              </tr>
+              {% endfor %}
 
 </table>
+</div>
 
 </body>
 </html>
