Switched to using Flask-Bootstrap

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}About Me{% endblock %}
 {% block content %}
+<div class="container">
         <p>I am an 18 year old senior at South San Francisco High School. I played football and basketball. Some of my hobbies are listed down below!</p>
         <h2>My hobbies</h2>
 
@@ -14,4 +15,5 @@
         <li>Braedyn</li>
         <img src='static/images/IMG_E0908.JPG' alt='The day ' width=360 height=400 x=0 y=0>
         </ul>
+</div>
 {% endblock %}
