--- a/templates/class_schedule.html
+++ b/templates/class_schedule.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-
 {% block title %}Class Schedule{% endblock %}
-
 {% block content %}
+<div class="container">
+
 <h2>Class Schedule</h2>
 <table class= "table table-striped table-bordered">
   <tr>
@@ -19,5 +19,5 @@
                 <td><a href="{{ course.resource_url }}">{{ course.resource_name }}</a></td>
               </tr>
     {% endfor %}
-
+</div>
 {% endblock %}
