--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Register{% endblock %}
 {% block content %}
+<div class="container">
     <h2>Register</h2>
 
      <form>
@@ -58,4 +59,5 @@
                     <button type="reset" class="btn btn-secondary">Reset</button>
                 </div>
             </form>
+            </div>
 {% endblock %}
