--- a/templates/top_ten_songs.html
+++ b/templates/top_ten_songs.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-
 {% block title %}Top Ten Songs{% endblock %}
-
 {% block content %}
+<div class="container">
+
 <h2>My Top Ten Songs</h2>
 <table class= "table table-striped table-bordered">
   <tr>
@@ -17,5 +17,5 @@
                 <td><iframe width="420" height="345" src={{ song.youtube_url }}></iframe></td>
               </tr>
     {% endfor %}
-
+</div>
 {% endblock %}
